syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "HelloProto";

package com.example.grpc;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (StringRequest) returns (HelloResponse) {}
}

// The request message containing the user's name.
message StringRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloResponse {
  string message = 1;
} 